# ChangeLog for app-portage/squashed-portage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 May 2013; Justin Lecher <jlec@gentoo.org> squashed-portage-0.8.ebuild:
  Keyword ~arm

  25 May 2013; Justin Lecher <jlec@gentoo.org> squashed-portage-0.8.ebuild:
  Keyword ~arm

*squashed-portage-0.8 (20 May 2013)

  20 May 2013; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.8.ebuild,
  squashed-portage-9999.ebuild, metadata.xml:
  Version BUmp

  19 May 2013; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild:
  Add new deps and move to python-single-r1

  19 Dec 2012; Justin Lecher <jlec@gentoo.org> -squashed-portage-0.3.ebuild,
  -squashed-portage-0.5.ebuild, squashed-portage-0.6.ebuild, metadata.xml:
  Drop unnecessary die

  19 Dec 2012; Justin Lecher <jlec@gentoo.org> -squashed-portage-0.3.ebuild,
  -squashed-portage-0.5.ebuild, metadata.xml:
  Drop old

*squashed-portage-0.4 (13 Aug 2012)

  13 Aug 2012; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.4.ebuild,
  metadata.xml:
  Version BUmp, fixes missing /etc/make.globals; drop no-herd from metadata.xml

  23 Sep 2011; Justin Lecher <jlec@gentoo.org> squashed-portage-0.1.ebuild,
  squashed-portage-0.2.ebuild, squashed-portage-0.3.ebuild,
  squashed-portage-9999.ebuild:
  Define default SRC_URI, #161

*squashed-portage-0.3 (14 Aug 2011)

  14 Aug 2011; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.3.ebuild,
  squashed-portage-9999.ebuild, metadata.xml:
  Version Bump, creates non existing subdirs before mount

  30 Mar 2011; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild:
  Fix 9999 to match new HEAD

*squashed-portage-0.2 (30 Mar 2011)

  30 Mar 2011; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.2.ebuild,
  squashed-portage-9999.ebuild:
  Version BUmp, fixes minor code bugs

  26 Mar 2011; Johann Schmitz <johann@j-schmitz.net> squashed-portage-9999.ebuild,
  metadata.xml:
  Updated HOMEPAGE in ebuild
