@@ -1,3 +1,1 @@
-DIST squashed-portage-0.6.tar.bz2 5486 SHA256 0d2cb8130dd6a3c00decd81fe07af833aa23e1cbbccdabf4e8cc84703256beed SHA512 8af4b261dc63c9f087b2aa7ee97729b24e5324a84e3b14485d48044e5df6fa1458f4848cc8d0be59290d730e6a10b0f9507b3cb2b60abeb983256f3fcb62636e WHIRLPOOL 070afb0575a74d6c5db09e17587a8b1dd6c82fa5b7d5985f1b7574d31ad76fd35d1595b0e2fe725ddc16301e3ee7bd92df6d3915d1c4405bca8b1ab7e3f80fbc
-DIST squashed-portage-0.7.tar.bz2 5649 SHA256 3883bbce4683e81e6ea7985b0bc3f11b928730caf52896deca2d144b512ca2ab SHA512 43e10a98c89406447cf9b54c5ee0c9e2a953dbdc6d0089b689557fba7c765e06b44fb8f6ec43742b652ab7e4a651f5d469fd0c8eb960c80b524f19c1ba2bff69 WHIRLPOOL 2cd017dc8f0f535b15387a651bbb0f00cac1cbfebb94af2dec0efc6b6c5ab569181d17f259dd2a6f933da682e13373222709a1baf1e64f33a4ebfc07b6f29827
 DIST squashed-portage-0.8.tar.xz 4620 SHA256 0d5f0193070610fcfdea903b64563480cb7fc5dd8811e3c5d49952c5e8213f1c SHA512 6a0e9fcc8cb2e823cad20303e265032b527d1c06ce59df10df2db7bff19e05b76d4e54d7fef8fcac8101ca5b24038d235278ae8980e65cce6bce86a35dec7271 WHIRLPOOL 161f83e943b6ce1544b9733b24179c48fefbbf8a75f564d6a842246dce1cf03bbd6dbca71604ffc469d13cbdf71beb1a2dad622cfb0b4b98e0951a440bb1481a
