@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Jul 2013; Justin Lecher <jlec@gentoo.org> -squashed-portage-0.6.ebuild,
+  -squashed-portage-0.7.ebuild:
+  Drop old
+
   25 May 2013; Justin Lecher <jlec@gentoo.org> squashed-portage-0.8.ebuild:
   Keyword ~arm
 
